{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 234,
  "lineage": "f3fbd534-a88b-1851-2f68-e945db52c556",
  "resources": [
    {
      "module": "module.Nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0264fc56f91c72e17",
            "domain": "vpc",
            "id": "eipalloc-0264fc56f91c72e17",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-227-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.227.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0264fc56f91c72e17",
            "connectivity_type": "public",
            "id": "nat-0502113d5dbb14305",
            "network_interface_id": "eni-0d6ecc36c724eb9d0",
            "private_ip": "10.0.1.222",
            "public_ip": "3.132.227.119",
            "subnet_id": "subnet-01fa2d45a5ec7246a",
            "tags": {
              "Name": "es-nat-gw"
            },
            "tags_all": {
              "Name": "es-nat-gw"
            }
          },
          "dependencies": [
            "module.Nat.aws_eip.nat_gateway",
            "module.pub-subnet.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:491633407585:instance/i-0a024c377a3335b6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a024c377a3335b6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d2a466a08a633cd",
            "private_dns": "ip-10-0-1-214.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "public_ip": "3.128.30.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045e9aabdf7854b0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fa2d45a5ec7246a",
            "tags": {
              "Name": "bhanu"
            },
            "tags_all": {
              "Name": "bhanu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09408e9afcaa0b536"
            ]
          },
          "dependencies": [
            "module.pub-subnet.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:internet-gateway/igw-0a6b48bbdf900271a",
            "id": "igw-0a6b48bbdf900271a",
            "owner_id": "491633407585",
            "tags": {
              "Name": "My Internet Gateway"
            },
            "tags_all": {
              "Name": "My Internet Gateway"
            },
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:security-group/sg-0a4b75239703559e5",
            "description": "security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4b75239703559e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for es",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for kibana",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for logstash",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "es-sg",
            "name_prefix": "",
            "owner_id": "491633407585",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pri-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:subnet/subnet-010c184cbaaba18de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c184cbaaba18de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491633407585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My private Subnet"
            },
            "tags_all": {
              "Name": "My private Subnet"
            },
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:subnet/subnet-0b791873ec0dbfabf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b791873ec0dbfabf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491633407585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My private Subnet"
            },
            "tags_all": {
              "Name": "My private Subnet"
            },
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:subnet/subnet-01fa2d45a5ec7246a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fa2d45a5ec7246a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491633407585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My Public Subnet"
            },
            "tags_all": {
              "Name": "My Public Subnet"
            },
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:route-table/rtb-0b1456c862e308a8b",
            "id": "rtb-0b1456c862e308a8b",
            "owner_id": "491633407585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6b48bbdf900271a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt"
            },
            "tags_all": {
              "Name": "pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:route-table/rtb-03c5b760c6c2cc219",
            "id": "rtb-03c5b760c6c2cc219",
            "owner_id": "491633407585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6b48bbdf900271a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My Public Route Table"
            },
            "tags_all": {
              "Name": "My Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b78a6578cfa8822d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d440f448b1882b",
            "route_table_id": "rtb-03c5b760c6c2cc219",
            "subnet_id": "subnet-01fa2d45a5ec7246a"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.pub-subnet.aws_subnet.my_public_subnet",
            "module.route_table.aws_route_table.my_public_rt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491633407585:vpc/vpc-0b78a6578cfa8822d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4bc60eff404fcec",
            "default_route_table_id": "rtb-05ee8bbe40b546166",
            "default_security_group_id": "sg-09408e9afcaa0b536",
            "dhcp_options_id": "dopt-7befa310",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b78a6578cfa8822d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ee8bbe40b546166",
            "owner_id": "491633407585",
            "tags": {
              "Name": "es"
            },
            "tags_all": {
              "Name": "es"
            }
          }
        }
      ]
    }
  ]
}